--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">SimpleBlogApp</string>
+    <string name="login_reg_btn_text">Need a new Account?</string>
+    <string name="login_btn_text">Login</string>
+    <string name="password_hint">Password</string>
+    <string name="Email_hint">Email</string>
+    <string name="login_logo_desc">LogoPage logo</string>
 </resources>
