Added Register view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,11 @@
     <string name="password_hint">Password</string>
     <string name="Email_hint">Email</string>
     <string name="login_logo_desc">LogoPage logo</string>
+    <string name="action_search_text">Search</string>
+    <string name="action_setting_text" >Account Settings</string>
+    <string name="action_logout_text">Logout</string>
+    <string name="reg_btn_text">Create new Account</string>
+    <string name="reg_login_text">Already have an Account?</string>
+    <string name="reg_password_hint">Password</string>
+    <string name="reg_confirm_password">Confirm Password</string>
 </resources>
